updates to logger

--- a/PythonWorkspace/EMSv2_1.ipynb
+++ b/PythonWorkspace/EMSv2_1.ipynb
@@ -470,23 +470,23 @@
         "                    \"DC load\"                   :self.actual_load[self.current_step,1],\n",
         "                    \"PV generation\"             :self.actual_gen[self.current_step,0],\n",
         "                    \"Wind generation\"           :self.actual_gen[self.current_step,1],\n",
-        "                    \"Excess Generation\"         :np.sum(self.excess_gen),\n",
-        "                    \"Unmet Load\"                :np.sum(self.step_unmet_load),\n",
+        "                    \"Excess Generation\"         :self.excess_gen[self.current_step],\n",
+        "                    \"Unmet Load\"                :self.step_unmet_load[self.current_step],\n",
         "                    \"LoadShedding\"              :self.load_shed[self.current_step],\n",
-        "                    \"Off-Peak Purchases\"        :np.sum(self.off_peak_purchases),\n",
-        "                    \"Standard Purchases\"        :np.sum(self.standard_purchases),\n",
-        "                    \"Peak Purchases\"            :np.sum(self.peak_purchases),\n",
+        "                    \"Off-Peak Purchases\"        :self.off_peak_purchases[self.current_step],\n",
+        "                    \"Standard Purchases\"        :self.standard_purchases[self.current_step],\n",
+        "                    \"Peak Purchases\"            :self.peak_purchases[self.current_step],\n",
         "                    \"Num Off-Peak Purchases\"    :np.count_nonzero(self.off_peak_purchases),\n",
         "                    \"Num Standard Purchases\"    :np.count_nonzero(self.standard_purchases),\n",
         "                    \"Num Peak Purchases\"        :np.count_nonzero(self.peak_purchases),\n",
         "                    \"Step Purchased\"            :self.step_purchased[self.current_step],\n",
         "                    \"Purchase Requested\"        :self.action_purchase[self.current_step],\n",
         "                    \"Num Diesel Gen Actions\"    :np.count_nonzero(self.diesel_count),\n",
-        "                    \"Total Reward\"              :np.sum(self.reward),\n",
-        "                    \"Money Spent\"               :np.sum(self.money_spent),\n",
-        "                    \"Rectifier total power flow\":np.sum(self.step_rect),\n",
-        "                    \"Inverter total power flow\" :np.sum(self.step_invt),\n",
-        "                    \"Diesel Generator\"          :np.sum(self.diesel_gen),\n",
+        "                    \"Total Reward\"              :self.reward[self.current_step],\n",
+        "                    \"Money Spent\"               :self.money_spent[self.current_step],\n",
+        "                    \"Rectifier total power flow\":self.step_rect[self.current_step],\n",
+        "                    \"Inverter total power flow\" :self.step_invt[self.current_step],\n",
+        "                    \"Diesel Generator\"          :self.diesel_gen[self.current_step],\n",
         "\n",
         "                  }\n",
         "\n",
