--- a/PythonWorkspace/EMSv2_4.ipynb
+++ b/PythonWorkspace/EMSv2_4.ipynb
@@ -751,9 +751,9 @@
         "        dc_power_bal, avail_bat, avail_stor = self.DC_bus()\n",
         "        current_battery_level =  self.bat_scaler.inverse_transform(self.battery_level[self.current_step].reshape(-1,1))\n",
         "\n",
-        "        purchase_amount = self.action_scaler.transform(np.array(purchase_amount).reshape(-1,1))\n",
+        "        purchase_amount_unnorm = self.action_scaler.transform(np.array(purchase_amount).reshape(-1,1))\n",
         "        if avail_grid: # if there is no loadshedding purchase the amount requested by the agent.\n",
-        "            self.step_purchased[self.current_step] = purchase_amount\n",
+        "            self.step_purchased[self.current_step] = purchase_amount_unnorm\n",
         "        else:\n",
         "            self.step_purchased[self.current_step] = 0\n",
         "        #calculate the immediate power_bal\n",
@@ -773,7 +773,7 @@
         "                #if the grid is available\n",
         "                #the min power needed is 0 if the grid power bal is positive with the available batter. Otherwise it is the shortage (grid_power_bal is negative, avail_bat is positive)\n",
         "                min_power_need = - min(grid_power_bal + avail_bat, 0)\n",
-        "                self.step_purchased[self.current_step] = purchase_amount + min_power_need\n",
+        "                self.step_purchased[self.current_step] = purchase_amount_unnorm + min_power_need\n",
         "            else:\n",
         "                #if not available add to the step un_met_load.\n",
         "                unmet_load = -min(grid_power_bal + avail_bat, 0)\n",
