changes to obs space

--- a/PythonWorkspace/EMSv2_5.ipynb
+++ b/PythonWorkspace/EMSv2_5.ipynb
@@ -21,6 +21,10 @@
       "cell_type": "markdown",
       "source": [
         "## **Version Notes**\n",
+        "#**v2.5**\n",
+        "* getting rid of the shorter episodes and going back to the normal approach\n",
+        "* reworked normalisation so that the power bal and the battery level are scaled using the same transform. The idea being that the units should be the same and thus the scales?\n",
+        "* changed action space to be centered on -1,1\n",
         "\n",
         "# **v2.4**\n",
         "* going to have shorter episodes (one month long)\n",
@@ -237,7 +241,7 @@
       "source": [
         "#define paths to logs and model saves\n",
         "model_type = \"PPO\"\n",
-        "version    = \"EMSv2_3\"\n",
+        "version    = \"EMSv2_5\"\n",
         "model_dir = f\"/content/drive/MyDrive/Colab Notebooks/{version}/models/{model_type}/\"\n",
         "log_dir   = f\"/content/drive/MyDrive/Colab Notebooks/{version}/models/{model_type}logs/\"\n",
         "animation_dir = f\"/content/drive/MyDrive/Colab Notebooks/{version}/models/{model_type}/animation/\"\n",
@@ -299,14 +303,14 @@
         }
       ],
       "source": [
-        "class EMSv2_3(gym.Env):\n",
+        "class EMSv2_5(gym.Env):\n",
         "    \"\"\"Custom Environment that follows gym interface.\"\"\"\n",
         "\n",
         "    metadata = {\"render_modes\": [\"human\",\"rgb_array\"], \"render_fps\": 30}\n",
         "\n",
         "    def __init__(self,bat_threshold = 0.1, bat_cap = 1, actual_load = \"none\", actual_gen = \"none\", purchase_price = [1,1,1,1,1,1,1,1,2,2,2,2] , episode_len = 8760,num_preds = 24,render_mode = \"rgb_array\", load_shedding = \"none\", wandb_log = False,train_log = True, gen_size = 100,demand_charge = 252.92):\n",
         "\n",
-        "        super(EMSv2_3, self).__init__()\n",
+        "        super(EMSv2_5, self).__init__()\n",
         "        #define render_mode\n",
         "        self.render_mode = render_mode\n",
         "        #define wandb\n",
@@ -818,7 +822,7 @@
         "\n",
         "\n",
         "#define a pointer (kinda, don't actually know what its called) a\n",
-        "EMS = EMSv2_3\n",
+        "EMS = EMSv2_5\n",
         "\n",
         "# Register environment so I can use make_vec_env\n",
         "register(\n",
